--- a/src/main/webapp/WEB-INF/messages_pt_BR.properties
+++ b/src/main/webapp/WEB-INF/messages_pt_BR.properties
@@ -1,5 +1,6 @@
 field.required = Campo obrigatório
 field.required.produto.titulo = O campo título é obrigatório
+field.required.produto.paginas = Field pages is required
 field.required.produto.descricao = O campo descrição é obrigatório
 
 typeMismatch = O tipo de dado foi inválido
@@ -14,5 +15,8 @@ navegacao.categoria.mobile = Mobile
 navegacao.categoria.web = Web
 navegacao.categoria.outros = Outros
 
-menu.carrinho = Seu carrinho
+menu.carrinho = Seu carrinho ({0})
 menu.sobre = Sobre nós
+
+menu.pt = Português
+menu.en = English
